--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sangho Lee
-subtitle: (이상호)
+subtitle: 이상호
 face: /assets/img/sangho.jpg
 cv: https://drive.google.com/open?id=1lCb0NtmINd4KnfotjcTqysd85pTmPpPx
 description: Ph.D student in CSE at Seoul National University
