--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ location: Seoul, South Korea
 email: sangho.lee AT vision.snu.ac.kr
 homepage: https://sangho-vision.github.io
 github: https://github.com/sangho-vision
+google_scholar: https://scholar.google.com/citations?hl=ko&user=Lq8MN6wAAAAJ
 theme: jekyll-theme-minimal
