--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sangho Lee
 subtitle: 이상호
 face: /assets/img/sangho.jpg
-cv: https://drive.google.com/open?id=1lCb0NtmINd4KnfotjcTqysd85pTmPpPx
+cv: /assets/cv/sangholee_cv.pdf
 description: Ph.D student in CSE at Seoul National University
 location: Seoul, South Korea
 email: sangho.lee AT vision.snu.ac.kr
