--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,6 @@ location: Seoul, South Korea
 email: sangho.lee AT vision.snu.ac.kr
 homepage: https://sangho-vision.github.io
 github: https://github.com/sangho-vision
+linkedin: https://www.linkedin.com/in/sanghol
 google_scholar: https://scholar.google.com/citations?hl=ko&user=Lq8MN6wAAAAJ
 theme: jekyll-theme-minimal
