--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Sangho Lee
 subtitle: 이상호
 face: /assets/img/sangho.jpg
 cv: /assets/cv/sangholee_cv.pdf
-description: Ph.D student in CSE at Seoul National University
-location: Seoul, South Korea
-email: sangho.lee AT vision.snu.ac.kr
+description: Postdoctoral Young Investigator at AI2 on the PRIOR team
+location: Seattle, WA, USA
+email: sanghol AT allenai.org
 homepage: https://sangho-vision.github.io
 github: https://github.com/sangho-vision
 linkedin: https://www.linkedin.com/in/sanghol
