--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,5 @@ homepage: https://sangho-vision.github.io
 github: https://github.com/sangho-vision
 linkedin: https://www.linkedin.com/in/sanghol
 google_scholar: https://scholar.google.com/citations?hl=ko&user=Lq8MN6wAAAAJ
+semantic_scholar: https://www.semanticscholar.org/author/Sangho-Lee/2144567767
 theme: jekyll-theme-minimal
