--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ title: Sangho Lee
 subtitle: 이상호
 face: /assets/img/sangho.jpg
 cv: /assets/cv/sangholee_cv.pdf
-description: Postdoctoral Young Investigator at AI2 on the PRIOR team
+description: Research Scientist at Ai2 on the PRIOR team
 location: Seattle, WA, USA
 email: sanghol AT allenai.org
 homepage: https://sangho-vision.github.io
 github: https://github.com/sangho-vision
 linkedin: https://www.linkedin.com/in/sanghol
-google_scholar: https://scholar.google.com/citations?hl=ko&user=Lq8MN6wAAAAJ
+google_scholar: https://scholar.google.com/citations?hl=en&user=Lq8MN6wAAAAJ
 semantic_scholar: https://www.semanticscholar.org/author/Sangho-Lee/2144567767
 theme: jekyll-theme-minimal
